Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -531,6 +531,7 @@ p {
     height: 100px;
     left: 60%;
     position: absolute; /* Ensure it flows naturally in the layout */
+    top: 30%;
   }
   
   .floating-icon-2 {
